# AdventOfCode

./: .gitignore  .hlint.yaml  .stylish-haskell.yaml  README.md
2018/: 1-chronal-calibration.hs  2-inventory-management.hs  AoCx2018.cabal  CHANGELOG.md
2018/data/: 10-puzzle-input  17-puzzle-input  18-puzzle-input  21-puzzle-input  25-puzzle-input  3-puzzle-input  6-puzzle-input
2018/src/: 1-chronal-calibration.hs  10-the-stars-align.hs  11-chronal-charge.hs  12-subterranean-sustainability.hs  14-chocolate-charts.hs  16-chronal-classification.hs  17-reservoir-research.hs  18-settlers-of-the-north-pole.hs  19-go-with-the-flow.hs  2-inventory-management.hs  20-a-regular-map.hs  21-chronal-conversion.hs  22-mode-maze.hs  23-experimental-emergency-teleportation.hs  25-four-dimensional-adventure.hs  3-no-matter-how-you-slice-it.hs  4-repose-record.hs  5-alchemical-reduction.hs  6-chronal-coordinates.hs  7-the-sum-of-its-parts.hs  8-memory-maneuver.hs  ChronalCalibration.hs  InventoryManagement.hs  Main.hs  Utils.hs
2019/: AoCx2019.cabal  CHANGELOG.md
2019/data/: 17-puzzle-sol-part-2  21-puzzle-sol-part-1  21-puzzle-sol-part-2  25-puzzle-sol-part-1
2019/src/: 1-the-tyranny-of-the-rocket-equation.hs  10-monitoring-station.hs  11-space-police.hs  12-n-body-problem.hs  13-care-package.hs  14-space-stoichiometry.hs  15-oxygen-system.hs  16-flawed-frequency-transmission.hs  17-set-and-forget.hs  18-many-worlds-interpretation.hs  19-tractor-beam.hs  2-1202-program-alarm.hs  20-donut-maze.hs  21-springdroid-adventure.hs  22-slam-shuffle.hs  23-category-six.hs  24-planet-of-discord.hs  25-cryostasis.hs  3-crossed-wires.hs  4-secure-container.hs  5-sunny-with-a-chance-of-asteroids.hs  6-universal-orbit-map.hs  7-amplification-circuit.hs  8-space-image-format.hs  9-sensor-boost.hs  Utils.hs
2020/: AoCx2020.cabal  CHANGELOG.md
2020/data/: 1-puzzle-input  19-puzzle-input  2-puzzle-input  3-puzzle-input  5-puzzle-input
2020/src/: 1-report-repair.hs  10-adapter-array.hs  11-seating-system.hs  12-rain-risk.hs  13-shuttle-search.hs  14-docking-data.hs  15-rambunctious-recitation.hs  16-ticket-translation.hs  17-conway-cubes.hs  18-operation-order.hs  19-monster-messages.hs  2-password-philosophy.hs  21-allergen-assessment.hs  22-crab-combat.hs  23-crab-cups.hs  24-lobby-layout.hs  25-combo-breaker.hs  3-toboggan-trajectory.hs  4-passport-processing.hs  5-binary-boarding.hs  6-custom-customs.hs  7-handy-haversacks.hs  8-handheld-halting.hs  9-encoding-error.hs  Utils.hs
2021/: AoCx2021.cabal  CHANGELOG.md
2021/src/: 1-sonar-sweep.hs  10-syntax-scoring.hs  11-dumbo-octopus.hs  13-transparent-origami.hs  14-extended-polymerization.hs  15-chiton.hs  17-trickshot.hs  2-dive.hs  21-dirac-dice.hs  3-binary-diagnostic.hs  6-lanternfish.hs  7-whales.hs  8-seven-segment-search.hs  9-smoke-basin.hs  Utils.hs
2022/: AoCx2022.cabal  CHANGELOG.md
2022/src/: 1-calorie-counting.hs  10-cathode-ray-tube.hs  11-monkey-in-the-middle.hs  12-hill-climbing-algorithm.hs  14-regolith-reservoir.hs  15-beacon-exclusion-zone.hs  2-rock-paper-scissors.hs  21-monkey-math.hs  25-full-of-hot-air.hs  3-rucksack-reorganization.hs  4-camp-cleanup.hs  6-tuning-trouble.hs  7-no-space-left-on-device.hs  8-treetop-tree-house.hs  Utils.hs
