cabal-version:       2.0

name:                AoCx2018
version:             0.1.0.0
synopsis:            Advent of Code 2018
description:         Problems from the 2018 Advent of Code completed in haskell. https://adventofcode.com/2018
author:              Ashwin Sekar
maintainer:          gaurjas@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable x1
  main-is:             1-chronal-calibration.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14,
                       containers
  default-language:    Haskell2010

executable x2
  main-is:             2-inventory-management.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14,
                       containers
  default-language:    Haskell2010

executable x4
  main-is:             4-repose-record.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14,
                       containers,
                       extra
  default-language:    Haskell2010

executable x5
  main-is:             5-alchemical-reduction.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14,
                       containers
  default-extensions:  TupleSections
  default-language:    Haskell2010

executable x7
  main-is:             7-the-sum-of-its-parts.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14,
                       containers
  default-extensions:  TupleSections
  default-language:    Haskell2010
