cabal-version:       2.0

name:                AoCx2018
version:             0.1.0.0
synopsis:            Advent of Code 2018
description:         Problems from the 2018 Advent of Code completed in haskell. https://adventofcode.com/2018
author:              Ashwin Sekar
maintainer:          gaurjas@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable x1
  main-is:             1-chronal-calibration.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14,
                       containers,
                       array
  default-language:    Haskell2010

executable x2
  main-is:             2-inventory-management.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14,
                       containers,
                       array
  default-language:    Haskell2010

executable x4
  main-is:             4-repose-record.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14,
                       containers,
                       extra,
                       array
  default-language:    Haskell2010

executable x5
  main-is:             5-alchemical-reduction.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14,
                       containers,
                       array
  default-extensions:  TupleSections
  default-language:    Haskell2010

executable x7
  main-is:             7-the-sum-of-its-parts.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14,
                       containers,
                       array
  default-extensions:  TupleSections
  default-language:    Haskell2010

executable x8
  main-is:             8-memory-maneuver.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14,
                       containers,
                       array
  default-extensions:  TupleSections
  default-language:    Haskell2010

executable x9
  main-is:             9-marble-mania.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14,
                       containers,
                       array
  default-extensions:  TupleSections
  default-language:    Haskell2010

executable x10
  main-is:             10-the-stars-align.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14,
                       containers,
                       parallel,
                       split,
                       extra,
                       ansi-terminal,
                       array
  default-extensions:  TupleSections,
                       ViewPatterns,
                       PatternSynonyms,
                       LambdaCase,
                       BlockArguments
  default-language:    Haskell2010


executable x11
  main-is:             11-chronal-charge.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14,
                       containers,
                       parallel,
                       array
  default-extensions:  TupleSections
  default-language:    Haskell2010

executable x12
  main-is:             12-subterranean-sustainability.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14,
                       containers,
                       parallel,
                       split,
                       array
  default-extensions:  TupleSections,
                       ViewPatterns,
                       PatternSynonyms,
                       LambdaCase
  default-language:    Haskell2010

executable x14
  main-is:             14-chocolate-charts.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14,
                       containers,
                       parallel,
                       split,
                       extra,
                       array
  default-extensions:  TupleSections,
                       ViewPatterns,
                       PatternSynonyms,
                       LambdaCase
  default-language:    Haskell2010

executable x18
  main-is:             18-settlers-of-the-north-pole.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14,
                       containers,
                       array
  default-language:    Haskell2010

executable x22
  main-is:             22-mode-maze.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14,
                       containers,
                       array,
                       split
  default-extensions:  ViewPatterns
  default-language:    Haskell2010

executable x23
  main-is:             23-experimental-emergency-teleportation.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14,
                       containers,
                       array,
                       megaparsec
  default-extensions:  ViewPatterns,
                       FlexibleContexts,
                       NamedFieldPuns,
                       TypeApplications
  default-language:    Haskell2010
