cabal-version:       >=2

name:                AoCx2019
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Ashwin Sekar
maintainer:          gaurjas@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable x1
  main-is:             1-the-tyranny-of-the-rocket-equation.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14
  default-language:    Haskell2010

executable x2
  main-is:             2-1202-program-alarm.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14,
                       array
  default-language:    Haskell2010

executable x3
  main-is:             3-crossed-wires.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14,
                       array
  default-language:    Haskell2010

executable x4
  main-is:             4-secure-container.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14
  default-language:    Haskell2010

executable x5
  main-is:             5-sunny-with-a-chance-of-asteroids.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14,
                       array
  default-language:    Haskell2010

executable x6
  main-is:             6-universal-orbit-map.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14
  default-language:    Haskell2010

executable x7
  main-is:             7-amplification-circuit.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14,
                       array
  default-language:    Haskell2010

executable x8
  main-is:             8-space-image-format.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14
  default-language:    Haskell2010

executable x9
  main-is:             9-sensor-boost.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14,
                       array,
                       mtl,
                       transformers
  default-language:    Haskell2010

executable x10
  main-is:             10-monitoring-station.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14,
                       containers
  default-language:    Haskell2010

executable x11
  main-is:             11-space-police.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14,
                       array,
                       mtl,
                       transformers,
                       containers
  default-language:    Haskell2010
