cabal-version:       >=2

name:                AoCx2019
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
-- license-file:        LICENSE
author:              Ashwin Sekar
maintainer:          gaurjas@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable x1
  main-is:             1-the-tyranny-of-the-rocket-equation.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14
  default-language:    Haskell2010

executable x2
  main-is:             2-1202-program-alarm.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14,
                       array
  default-language:    Haskell2010

executable x3
  main-is:             3-crossed-wires.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14,
                       array
  default-language:    Haskell2010

executable x4
  main-is:             4-secure-container.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14
  default-language:    Haskell2010

executable x5
  main-is:             5-sunny-with-a-chance-of-asteroids.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14,
                       array
  default-language:    Haskell2010

executable x6
  main-is:             6-universal-orbit-map.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14,
                       mtl,
                       containers
  default-language:    Haskell2010

executable x7
  main-is:             7-amplification-circuit.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14,
                       array,
                       mtl,
                       transformers
  default-language:    Haskell2010

executable x8
  main-is:             8-space-image-format.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14
  default-language:    Haskell2010

executable x9
  main-is:             9-sensor-boost.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14,
                       array,
                       mtl,
                       transformers
  default-language:    Haskell2010

executable x10
  main-is:             10-monitoring-station.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14,
                       containers
  default-language:    Haskell2010

executable x11
  main-is:             11-space-police.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14,
                       array,
                       mtl,
                       transformers,
                       containers
  default-language:    Haskell2010

executable x12
  main-is:             12-n-body-problem.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14,
                       extra
  default-language:    Haskell2010

executable x13
  main-is:             13-care-package.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14,
                       array,
                       mtl,
                       transformers,
                       ansi-terminal,
                       STMonadTrans
  default-language:    Haskell2010

executable x14
  main-is:             14-space-stoichiometry.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14,
                       containers,
                       mtl,
                       extra
  default-language:    Haskell2010

executable x15
  main-is:             15-oxygen-system.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14,
                       array,
                       mtl,
                       transformers,
                       ansi-terminal,
                       STMonadTrans,
                       random,
                       containers,
                       heap
  default-language:    Haskell2010

executable x16
  main-is:             16-flawed-frequency-transmission.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14
  default-language:    Haskell2010

executable x17
  main-is:             17-set-and-forget.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14,
                       array,
                       mtl,
                       transformers,
                       ansi-terminal,
                       STMonadTrans,
                       random
  default-language:    Haskell2010

executable x18
  main-is:             18-many-worlds-interpretation.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14,
                       array,
                       heap,
                       containers,
                       mtl
  extensions:          TupleSections
  default-language:    Haskell2010

executable x19
  main-is:             19-tractor-beam.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14,
                       array,
                       containers,
                       mtl,
                       transformers,
                       ansi-terminal,
                       STMonadTrans,
                       random
  default-language:    Haskell2010

executable x20
  main-is:             20-donut-maze.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14,
                       array,
                       heap,
                       containers,
                       mtl
  default-language:    Haskell2010

executable x21
  main-is:             21-springdroid-adventure.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14,
                       array,
                       mtl,
                       transformers,
                       ansi-terminal,
                       STMonadTrans,
                       random
  default-language:    Haskell2010

executable x22
  main-is:             22-slam-shuffle.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14
  default-language:    Haskell2010

executable x24
  main-is:             24-planet-of-discord.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14,
                       array,
                       containers
  extensions:          TupleSections
  default-language:    Haskell2010

executable x25
  main-is:             25-cryostasis.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base ^>= 4.14,
                       array,
                       mtl,
                       transformers,
                       ansi-terminal,
                       STMonadTrans,
                       random
  default-language:    Haskell2010
