cabal-version:       >=1.10

name:                AoCx2020
version:             0.1.0.0
synopsis:            Advent of Code 2020
description:         Problems from the 2020 Advent of Code completed in haskell. https://adventofcode.com/2020
author:              Ashwin Sekar
maintainer:          gaurjas@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable x1
  main-is:             1-report-repair.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base >=4.14 && <4.15,
                       containers
  default-extensions:  TupleSections
  default-language:    Haskell2010

executable x2
  main-is:             2-password-philosophy.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base >=4.14 && <4.15,
                       containers,
                       megaparsec
  default-language:    Haskell2010

executable x3
  main-is:             3-toboggan-trajectory.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base >=4.14 && <4.15,
                       containers,
                       megaparsec
  default-language:    Haskell2010

executable x4
  main-is:             4-passport-processing.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base >=4.14 && <4.15,
                       containers,
                       megaparsec
  default-extensions:  ViewPatterns
  default-language:    Haskell2010

executable x5
  main-is:             5-binary-boarding.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base >=4.14 && <4.15,
                       containers,
                       megaparsec
  default-extensions:  ViewPatterns
  default-language:    Haskell2010

executable x6
  main-is:             6-custom-customs.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base >=4.14 && <4.15,
                       containers,
                       megaparsec,
											 split
  default-extensions:  ViewPatterns
  default-language:    Haskell2010

executable x7
  main-is:             7-handy-haversacks.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base >=4.14 && <4.15,
                       containers,
                       megaparsec,
											 split,
											 mtl,
											 keys
  default-extensions:  ViewPatterns
  default-language:    Haskell2010

executable x8
  main-is:             8-handheld-halting.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base >=4.14 && <4.15,
                       containers,
                       megaparsec,
											 split,
											 mtl,
											 keys
  default-extensions:  ViewPatterns
  default-language:    Haskell2010

executable x9
  main-is:             9-encoding-error.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base >=4.14 && <4.15,
                       containers,
                       megaparsec,
											 split,
											 mtl,
											 keys
  default-extensions:  ViewPatterns
  default-language:    Haskell2010
