cabal-version:       >=1.10

name:                AoCx2020
version:             0.1.0.0
synopsis:            Advent of Code 2020
description:         Problems from the 2020 Advent of Code completed in haskell. https://adventofcode.com/2020
author:              Ashwin Sekar
maintainer:          gaurjas@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable x1
  main-is:             1-report-repair.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base >=4.14 && <4.15,
                       containers,
                       megaparsec
  default-extensions:  TupleSections
  default-language:    Haskell2010

executable x2
  main-is:             2-password-philosophy.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base >=4.14 && <4.15,
                       containers,
                       megaparsec
  default-language:    Haskell2010

executable x3
  main-is:             3-toboggan-trajectory.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base >=4.14 && <4.15,
                       containers,
                       megaparsec
  default-language:    Haskell2010

executable x4
  main-is:             4-passport-processing.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base >=4.14 && <4.15,
                       containers,
                       megaparsec
  default-extensions:  ViewPatterns
  default-language:    Haskell2010

executable x5
  main-is:             5-binary-boarding.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base >=4.14 && <4.15,
                       containers,
                       megaparsec
  default-extensions:  ViewPatterns
  default-language:    Haskell2010

executable x6
  main-is:             6-custom-customs.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base >=4.14 && <4.15,
                       containers,
                       megaparsec,
											 split
  default-extensions:  ViewPatterns
  default-language:    Haskell2010

executable x7
  main-is:             7-handy-haversacks.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base >=4.14 && <4.15,
                       containers,
                       megaparsec,
											 split,
											 mtl,
											 keys
  default-extensions:  ViewPatterns
  default-language:    Haskell2010

executable x8
  main-is:             8-handheld-halting.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base >=4.14 && <4.15,
                       containers,
                       megaparsec,
											 split,
											 mtl,
											 keys
  default-extensions:  ViewPatterns
  default-language:    Haskell2010

executable x9
  main-is:             9-encoding-error.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base >=4.14 && <4.15,
                       containers,
                       megaparsec,
											 split,
											 mtl,
											 keys
  default-extensions:  ViewPatterns
  default-language:    Haskell2010

executable x10
  main-is:             10-adapter-array.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base >=4.14 && <4.15,
                       containers,
                       megaparsec,
											 split,
											 mtl,
											 keys
  default-extensions:  ViewPatterns
  default-language:    Haskell2010

executable x11
  main-is:             11-seating-system.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base >=4.14 && <4.15,
                       containers,
                       megaparsec,
											 split,
											 mtl,
											 keys
  default-extensions:  ViewPatterns
  default-language:    Haskell2010

executable x12
  main-is:             12-rain-risk.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base >=4.14 && <4.15,
                       containers,
                       megaparsec,
											 extra
  default-extensions:  ViewPatterns
  default-language:    Haskell2010

executable x13
  main-is:             13-shuttle-search.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base >=4.14 && <4.15,
                       containers,
                       megaparsec,
											 extra
  default-extensions:  ViewPatterns
  default-language:    Haskell2010

executable x14
  main-is:             14-docking-data.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base >=4.14 && <4.15,
                       containers,
                       megaparsec,
											 extra
  default-extensions:  ViewPatterns
  default-language:    Haskell2010

executable x15
  main-is:             15-rambunctious-recitation.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base >=4.14 && <4.15,
                       containers,
                       megaparsec,
											 extra
  default-extensions:  ViewPatterns
  default-language:    Haskell2010

executable x16
  main-is:             16-ticket-translation.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base >=4.14 && <4.15,
                       containers,
                       megaparsec,
											 extra
  default-extensions:  ViewPatterns
  default-language:    Haskell2010

executable x17
  main-is:             17-conway-cubes.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base >=4.14 && <4.15,
                       containers,
                       megaparsec,
											 extra
  default-extensions:  FlexibleInstances
  default-language:    Haskell2010

executable x18
  main-is:             18-operation-order.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base >=4.14 && <4.15,
                       containers,
                       megaparsec,
											 parser-combinators,
											 extra
  default-extensions:  FlexibleInstances
  default-language:    Haskell2010

executable x19
  main-is:             19-monster-messages.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base >=4.14 && <4.15,
                       containers,
                       megaparsec,
											 extra
  default-extensions:  FlexibleInstances
  default-language:    Haskell2010

executable x20
  main-is:             20-jurassic-jigsaw.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base >=4.14 && <4.15,
                       containers,
                       megaparsec,
											 extra
  default-extensions:  FlexibleInstances
  default-language:    Haskell2010

executable x21
  main-is:             21-allergen-assessment.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base >=4.14 && <4.15,
                       containers,
                       megaparsec,
											 extra
  default-extensions:  ViewPatterns
  default-language:    Haskell2010

executable x22
  main-is:             22-crab-combat.hs
  hs-source-dirs:      src
  other-modules:       Utils
  build-depends:       base >=4.14 && <4.15,
                       containers,
                       megaparsec,
											 extra
  default-extensions:  ViewPatterns
  default-language:    Haskell2010
