cabal-version:      2.4
name:               AoCx2021
version:            0.1.0.0
synopsis:           Advent of Code 2021
author:              Ashwin Sekar
maintainer:          gaurjas@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable x1
    main-is:          1-sonar-sweep.hs
    hs-source-dirs:   src
    other-modules:    Utils
    build-depends:    base ^>=4.14.3.0,
                      containers,
                      megaparsec
    default-language: Haskell2010

executable x2
    main-is:            2-dive.hs
    hs-source-dirs:     src
    other-modules:      Utils
    build-depends:      base ^>=4.14.3.0,
                        containers,
                        megaparsec
    default-language:   Haskell2010
    default-extensions: TupleSections

executable x3
    main-is:            3-binary-diagnostic.hs
    hs-source-dirs:     src
    other-modules:      Utils
    build-depends:      base ^>=4.14.3.0,
                        containers,
                        megaparsec
    default-language:   Haskell2010
    default-extensions: TupleSections
