cabal-version:      2.4
name:               AoCx2021
version:            0.1.0.0
synopsis:           Advent of Code 2021
author:              Ashwin Sekar
maintainer:          gaurjas@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable x1
    main-is:          1-sonar-sweep.hs
    hs-source-dirs:   src
    other-modules:    Utils
    build-depends:    base ^>=4.14.3.0,
                      containers,
                      megaparsec
    default-language: Haskell2010

executable x2
    main-is:            2-dive.hs
    hs-source-dirs:     src
    other-modules:      Utils
    build-depends:      base ^>=4.14.3.0,
                        containers,
                        megaparsec
    default-language:   Haskell2010
    default-extensions: TupleSections

executable x3
    main-is:            3-binary-diagnostic.hs
    hs-source-dirs:     src
    other-modules:      Utils
    build-depends:      base ^>=4.14.3.0,
                        containers,
                        megaparsec
    default-language:   Haskell2010
    default-extensions: TupleSections

executable x6
    main-is:            6-lanternfish.hs
    hs-source-dirs:     src
    other-modules:      Utils
    build-depends:      base ^>=4.14.3.0,
                        containers,
                        megaparsec
    default-language:   Haskell2010
    default-extensions: TupleSections

executable x7
    main-is:            7-whales.hs
    hs-source-dirs:     src
    other-modules:      Utils
    build-depends:      base ^>=4.14.3.0,
                        containers,
                        megaparsec
    default-language:   Haskell2010
    default-extensions: TupleSections

executable x8
    main-is:            8-seven-segment-search.hs
    hs-source-dirs:     src
    other-modules:      Utils
    build-depends:      base ^>=4.14.3.0,
                        containers,
                        megaparsec
    default-language:   Haskell2010
    default-extensions: TupleSections

executable x9
    main-is:            9-smoke-basin.hs
    hs-source-dirs:     src
    other-modules:      Utils
    build-depends:      base ^>=4.14.3.0,
                        containers,
                        megaparsec
    default-language:   Haskell2010
    default-extensions: TupleSections

executable x10
    main-is:            10-syntax-scoring.hs
    hs-source-dirs:     src
    other-modules:      Utils
    build-depends:      base ^>=4.14.3.0,
                        containers,
                        megaparsec
    default-language:   Haskell2010
    default-extensions: TupleSections

executable x11
    main-is:            11-dumbo-octopus.hs
    hs-source-dirs:     src
    other-modules:      Utils
    build-depends:      base ^>=4.14.3.0,
                        containers,
                        megaparsec
    default-language:   Haskell2010
    default-extensions: TupleSections

executable x13
    main-is:            13-transparent-origami.hs
    hs-source-dirs:     src
    other-modules:      Utils
    build-depends:      base ^>=4.14.3.0,
                        containers,
                        megaparsec
    default-language:   Haskell2010
    default-extensions: TupleSections

executable x14
    main-is:            14-extended-polymerization.hs
    hs-source-dirs:     src
    other-modules:      Utils
    build-depends:      base ^>=4.14.3.0,
                        containers,
                        megaparsec
    default-language:   Haskell2010
    default-extensions: TupleSections

executable x15
    main-is:            15-chiton.hs
    hs-source-dirs:     src
    other-modules:      Utils
    build-depends:      base ^>=4.14.3.0,
                        containers,
                        megaparsec,
                        heap
    default-language:   Haskell2010
    default-extensions: TupleSections
                        ViewPatterns

executable x17
    main-is:            17-trickshot.hs
    hs-source-dirs:     src
    other-modules:      Utils
    build-depends:      base ^>=4.14.3.0,
                        containers,
                        megaparsec
    default-language:   Haskell2010
    default-extensions: TupleSections

executable x21
    main-is:            21-dirac-dice.hs
    hs-source-dirs:     src
    other-modules:      Utils
    build-depends:      base ^>=4.14.3.0,
                        containers,
                        megaparsec
    default-language:   Haskell2010
    default-extensions: TupleSections
