cabal-version:      2.4
name:               AoCx2022
version:            0.1.0.0
synopsis:           Advent of Code 2022
author:              Ashwin Sekar
maintainer:          gaurjas@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable x1
    main-is:          1-calorie-counting.hs
    hs-source-dirs:   src
    other-modules:    Utils
    build-depends:    base ^>=4.14.3.0,
                      containers,
                      megaparsec
    default-language: Haskell2010

executable x2
    main-is:          2-rock-paper-scissors.hs
    hs-source-dirs:   src
    other-modules:    Utils
    build-depends:    base ^>=4.14.3.0,
                      containers,
                      megaparsec
    default-language: Haskell2010

executable x3
    main-is:          3-rucksack-reorganization.hs
    hs-source-dirs:   src
    other-modules:    Utils
    build-depends:    base ^>=4.14.3.0,
                      containers,
                      megaparsec
    default-language: Haskell2010
