cabal-version:      2.4
name:               AoCx2022
version:            0.1.0.0
synopsis:           Advent of Code 2022
author:              Ashwin Sekar
maintainer:          gaurjas@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable x1
    main-is:          1-calorie-counting.hs
    hs-source-dirs:   src
    other-modules:    Utils
    build-depends:    base ^>=4.14.3.0,
                      containers,
                      megaparsec
    default-language: Haskell2010

executable x2
    main-is:          2-rock-paper-scissors.hs
    hs-source-dirs:   src
    other-modules:    Utils
    build-depends:    base ^>=4.14.3.0,
                      containers,
                      megaparsec
    default-language: Haskell2010

executable x3
    main-is:          3-rucksack-reorganization.hs
    hs-source-dirs:   src
    other-modules:    Utils
    build-depends:    base ^>=4.14.3.0,
                      containers,
                      megaparsec
    default-language: Haskell2010

executable x4
    main-is:          4-camp-cleanup.hs
    hs-source-dirs:   src
    other-modules:    Utils
    build-depends:    base ^>=4.14.3.0,
                      containers,
                      megaparsec
    default-language: Haskell2010

executable x5
    main-is:          5-supply-stacks.hs
    hs-source-dirs:   src
    other-modules:    Utils
    build-depends:    base ^>=4.14.3.0,
                      containers,
                      megaparsec
    default-language: Haskell2010

executable x6
    main-is:          6-tuning-trouble.hs
    hs-source-dirs:   src
    other-modules:    Utils
    build-depends:    base ^>=4.14.3.0,
                      containers,
                      megaparsec
    default-language: Haskell2010

executable x7
    main-is:          7-no-space-left-on-device.hs
    hs-source-dirs:   src
    other-modules:    Utils
    build-depends:    base ^>=4.14.3.0,
                      containers,
                      megaparsec
    default-language: Haskell2010

executable x8
    main-is:          8-treetop-tree-house.hs
    hs-source-dirs:   src
    other-modules:    Utils
    build-depends:    base ^>=4.14.3.0,
                      containers,
                      megaparsec
    default-language: Haskell2010

executable x21
    main-is:          21-monkey-math.hs
    hs-source-dirs:   src
    other-modules:    Utils
    build-depends:    base ^>=4.14.3.0,
                      containers,
                      megaparsec,
                      extra
    default-language: Haskell2010
